<resources>
    <string name="app_name">V-KA云会员系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_order__details_">Order_Details_Activity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="scan_text"></string>
    <string name="title_activity_get__money__details_main">Get_Money_DetailsMainActivity</string>
    <string name="title_activity_vip_pay__details">Vip_pay_DetailsActivity</string>
    <string name="title_activity_vip_pay">VipPayActivity</string>
    <string name="title_activity_vip_find">VipFindActivity</string>
    <string name="title_activity_vip_recharge">VipRechargeActivity</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="title_activity_vip_deal">VipDealActivity</string>
    <string name="title_activity_check_ticket_record">CheckTicketRecordActivity</string>
    <string name="btn_login">登录</string>
    <string name="btn_getcode">获取验证码</string>
    <string name="btn_regist">注册</string>
    <string name="et_phone">手机号</string>
    <string name="text_xing">*</string>
    <string name="et_code">验证码</string>
    <string name="et_pwd">密码</string>
    <string name="et_qr_pwd">确认密码</string>
    <string name="et_birth">生日</string>
    <string name="et_person_code">身份证</string>
    <string name="btn_forget_pwd">忘记密码？</string>
    <string name="et_input_phone">请输入手机号</string>
    <string name="tv_code_msg">为了验证身份，我们将会发送短信验证码</string>
    <string name="btn_next">下一步</string>
    <string name="et_input_code">请输入验证码</string>
    <string name="btn_ok">完成</string>
    <string name="et_set_pwd">请设置您的登录密码</string>
    <string name="tv_more_appraise">去给V-Ka打个分，评价一下吧</string>
    <string name="about_v_ka">关于V-Ka</string>
    <string name="tv_account_manage">账户管理</string>
    <string name="tv_my_address">我的地址</string>
    <string name="tv_my_oder">我的订单</string>
    <string name="tv_give_pay">给收银员扫一扫完成会员支付</string>
    <string name="btn_open_vip">开通会员</string>
    <string name="tv_shop_detail">商铺简介</string>
    <string name="et_card_num">卡号</string>
    <string name="icon_shop_title">商家店名</string>
    <string name="btn_add">添加</string>
    <string name="tv_balance">预存余额</string>
    <string name="tv_jifen">积分余额</string>
    <string name="tv_my_quan">我的优惠券</string>
    <string name="tv_history">消费记录</string>
    <string name="tv_quan_name">券名称</string>
    <string name="tv_quan_type">券类型</string>
    <string name="tv_quan_youhui">优惠</string>
    <string name="tv_quan_usedate">有效期</string>
    <string name="btn_out">外卖点餐</string>
    <string name="btn_submit_goods">到购物车支付</string>
    <string name="tv_write_phone">填写您的手机号</string>
    <string name="tv_write_address">填写送餐地址</string>
    <string name="et_pay_pwd">输入支付密码</string>
    <string name="btn_binding">绑定</string>
    <string name="btn_qd">确定</string>
    <string name="tv_choose_pay">选择支付方式：</string>
    <string name="btn_pay_vip">会员卡</string>
    <string name="btn_pay_cod">货到付款</string>
    <string name="btn_pay_zfb">支付宝</string>
    <string name="btn_pay_wechat">微信</string>
    <string name="btn_logout">注销</string>
    <string name="btn_my_order">查看订单</string>
    <string name="tv_card_msg">会员卡信息：</string>
    <string name="title_activity_take_pay">TakePayActivity</string>
    <string name="title_activity_my_progress">MyProgressActivity</string>
</resources>
